<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_upload_layout"
        >
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/category_upload"
    android:singleLine="true"
    android:hint="@string/HINT"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_upload_layout"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_upload"
            android:singleLine="true"
            android:hint="@string/TITLE"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/short_upload_layout"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/short_upload"
            android:hint="@string/SHORT_DESCRIPTION"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/long_upload_layout"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/long_upload"
            android:hint="@string/LONG_DESCRIPTION"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/image_upload"
            android:src="@drawable/mohit"/>
        <Button
            android:text="@string/UPLOAD_IMAGE"
            android:layout_width="match_parent"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/btn_image_upload"
            android:layout_height="match_parent" />
        </LinearLayout>
    <Button
        android:text="@string/SAVE"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_content_upload"/>
    </LinearLayout>
